// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Push API handle streamed response 1`] = `
"> preparing all monitors
> creating all monitors
> journey 1
> journey 2
> deleting all stale monitors
✓ Pushed
"
`;

exports[`Push API handle sync response 1`] = `
"> preparing all monitors
> creating all monitors
> deleting all stale monitors
✓ Pushed
"
`;

exports[`Push abort on push with different project id 1`] = `
"⚠ Push command Aborted
"
`;

exports[`Push error on empty project id 1`] = `
"Aborted. Invalid synthetics project settings.

Set project id via CLI as \`--id <id>\`

Run 'npx @elastic/synthetics init' to create project with default settings.
"
`;

exports[`Push error on invalid location 1`] = `
"Aborted. Invalid synthetics project settings.

Set default location for all monitors via
  - CLI as '--locations <values...> or --privateLocations <values...>'
  - Synthetics config file 'monitors.locations' | 'monitors.privateLocations' field

Run 'npx @elastic/synthetics init' to create project with default settings.
"
`;

exports[`Push error on invalid schedule 1`] = `
"Aborted. Invalid synthetics project settings.

Set default schedule in minutes for all monitors via
  - CLI as '--schedule <mins>'
  - Synthetics config file 'monitors.schedule' field

Run 'npx @elastic/synthetics init' to create project with default settings.
"
`;

exports[`Push format duplicate monitors 1`] = `
"Aborted: Duplicate monitors found
   * test - journey1.ts:2:5
   * test - journey2.ts:10:5
   "
`;
